app/assets/stylesheets/_reader_text.scss
// `Note: SCSS allows use of CSS, for easier shared used with designers

// `Reader paragraph styles
//----------------------------------------------------------------------------------------------------

// introductory paragraph after a header paragraph
.s + .p,
.s1 + .p,
.s2 + .p,
.s + .pi,
.s + .pi1,
.s1 + .pi,
.s1 + .pi1,
.pi + .p,
.pi1 + .p,
.ms + .p,
.ms1 + .p,
.ms2 + .p,
.r + .p {
  text-indent: 0;
  margin: 1em 0 0 0;
}

.s, .s1 {
  line-height: 1em;
}

// Giving top margins to body text that follows headers
// and to headers that follow body text
.p + .s,
.p + .s1,
.p + .s2,
.p + .ms,
.p + .ms1,
.p + .ms2,
.p + .q,
.p + .q1,
.p + .li,
.p + .li1,
.li + .li2,
.li1 + .li2,
.li2 + .li,
.li2 + .li1,
.li + .s,
.li1 + .s,
.li2 + .s,
.li + .s1,
.li1 + .s1,
.li2 + .s1,
.li + .s2,
.li1 + .s2,
.li2 + .s2,
.m + .s,
.m + .s1,
.m + .s2,
.m + .ms,
.m + .ms1,
.m + .ms2,
.m + .q,
.m + .q1,
.m + .p,
.q + .p,
.q1 + .p,
.q1 + p,
.q2 + .p,
.q + .p,
.q + .s,
.q + .s1,
.q + .s2,
.q + .ms,
.q + .ms1,
.q + .ms2,
.q1 + .s,
.q1 + .s1,
.q1 + .s2,
.q1 + .m,
.q1 + .ms,
.q1 + .ms1,
.q1 + .ms2,
.q2 + .p,
.q2 + .s,
.q2 + .s1,
.q2 + .s2,
.q2 + .m,
.q2 + .ms,
.q2 + .ms1,
.q2 + .ms2,
.q3 + .s,
.q3 + .s1,
.q3 + .s2,
.q3 + .m,
.q3 + .ms,
.q3 + .ms1,
.q3 + .ms2,
.imt + .is,
.imt + .is1,
.imt1 + .is,
.imt1 + .is1,
.ip + .is1,
.io + .is,
.io + .is1,
.io1 + .is,
.io1 + .is1,
.io2 + .is,
.io2 + .is1,
.io3 + .is,
.io3 + .is1,
.ip + .io,
.ip + .io1,
.ip + .io2,
.ip + .io3,
.pi + .s,
.pi + .s1,
.pi1 + .s,
.pi1 + .s1,
.mr + .s1 {
  margin-top: 1em;
}

.chapter div:first-child {
  margin-top: 0;
}

.p, .ip {
  margin-bottom: 0;
  text-indent: 1em;
}

.imt, .imt1,.mt, .mt1, .ms, .ms1 {
  font-size: 1.3em;
  line-height: $reader_line_height;
  margin: 1em 0 0 0;
  font-weight: bold;
}

.ms + .mr {
  margin-top: -1em;
}

.iot, .imt, .imt1 {
  font-size: 1.3em;
  line-height: $reader_line_height;
  margin: .5em 0;
  font-weight: bold;
}

.io, .io1 {
  list-style-type: disc;
  margin-left: 1em;
  display: list-item;
}

.io2, io3 {
  list-style-type: disc;
  margin-left: 2em;
  display: list-item;
}

.ipi {
  text-indent: 1em;
}

.imt2, .imt3, imt4 {
  font-size: 1em;
  line-height: $reader_line_height;
  margin: .5em 0;
  font-weight: bold;
}

.is, .is1, .s, .s1, .ms, .ms1 {
  font-size: 1.5em;
  font-weight: bold;
  line-height: $reader_line_height;
  margin: 0 0 1em 0;
}

// Font size should be set in the parent element: (for example .s)
.heading {
  font-size: 1em;
  font-weight: bold;
  line-height: 1em;
  margin: 0 0 1em 0;
  -webkit-font-smoothing: subpixel-antialiased;
}

.s2, .s3, .s4, .ms2, .ms3, .ms4 {
  font-size: 0.85em;
  font-weight: bold;
  line-height: $reader_line_height;
  margin: 0 0 1em 0;
}

.ip, .im, .iex, .p, .m, .nb, .cls {
  font-size: 1.0em;
  line-height: $reader_line_height;
  margin: 0;
}

.ipi, .imi, .pm, .pmc, .pi, .pi1, .mi {
  margin: 0 1em;
  line-height: $reader_line_height;
}

.imi {
  margin-left: 1em;
  text-indent: 0;
}

.ipr, .pr, .qr, .cls {
  text-align: right;
}

// hanging indents for quotes
.iq, .iq1, .q, .q1, .qm, .qm1 {
  padding-left: 2.5em;
  text-indent: -1em;
  //line-height: 1.5em;
  line-height: $reader_line_height;
}

.iqt {
  margin-left: 1em;
}

.iq2, .q2, .qm2, .iq3, .q3, .qm3 {
  padding-left: 3.5em;
  text-indent: -1em;
  //line-height: 1.5em;
  line-height: $reader_line_height;
}

.lb, .b {
  line-height: $reader_line_height;
  height: 1em;
}

.ili, .ili1, .io1, .li1 {
  margin-left: 2em;
  padding-left: 0;
  line-height: $reader_line_height;
}

.ili2, .io2, .li2 {
  margin-left: 4em;
  padding-left: 0;
  line-height: $reader_line_height;
}

.iot, .d, .qa {
  font-size: 1.0em;
  line-height: $reader_line_height;
}

.ior {
  font-style: italic;
}

.iqt, .bk, .sls, .tl, .r {
  font-style: italic;
}

.mr {
  font-style: italic;
  font-weight: bold;
}

.sr, .r, .sr .heading, .r .heading, .rq  {
  font-style: italic;
  font-size: 0.8em;
}

.sp {
  font-style: italic;
}

.pmr {
  text-align: right;
  margin-right: 0.3em;
}

.pc, .qc {
  text-align: center;
}

.ph, .ph1 {
  text-indent: -2em;
  padding-left: 2em;
}

.ph2 {
  text-indent: -2em;
  padding-left: 4em;
}

.qs, .lit {
  float: right;
  font-style: italic;
}

.q, .q1 {
  text-indent: 1em;
}

.q2, .q3 {
  text-indent: 2em;
}

//Footnote additional paragraph
.fp {
  margin-top: 1em;
  display: inline-block;
  text-indent: 1em;
}
span.fk {
	font-weight: bold;
	font-style: italic;
}
span.fqa {
	font-style: italic;
}


.table {
  border-bottom: 1em;
}

.table th, .th1 {
  background: #444;
  color: #fff;
  font-weight: bold;
  padding: 5px;
}

.thr, .thr1 {
  text-align: right;
  font-weight: bold;
  padding: 5px;
}

.table td, .tc {
  border: 1px solid #eee;
  padding: 5px;
}

.tcr, .tcr1 {
  border: 1px solid #eee;
  padding: 5px;
  text-align: right;
}

.add, .dc, .k, .qt, .sig {
  padding: 0;
  margin: 0;
  font-size: 1.0em;
  line-height: $reader_line_height;
  text-indent: 0;
  font-weight: normal;
  font-style: normal;
  text-transform: none;
  text-decoration: none;
}

.nd {
  font-variant: small-caps;
}

.ord {
  font-size: .75em;
  line-height: $reader_line_height;
  position: relative;
  vertical-align: baseline;
  top: -0.5em;
}

// `Reader span/text sub styles
//----------------------------------------------------------------------------------------------------


.wordsofchrist,
.wj .content {
  color: #cc0000;
}

.pn {
  text-decoration: underline;
}

.em, .bd {
  font-weight: bold;
}
.it, .cd {
  font-style: italic;
}

.bdit {
  font-weight: bold;
  font-style: italic;
}

.d {
  font-style: italic;
  margin-bottom: 1em;
}

.no {
  font-weight: normal;
  font-style: normal;
}

.sc {
  font-variant: small-caps;
}

// processor instruction intended to give the typesetter
// the printable chapter name
.cl {
  display: none;
}

// `Custom overrides
//----------------------------------------------------------------------------------------------------

// for versions that have no space in front of the verse label
.vid8 .content:after,
.vid58 .content:after,
.vid111 .content:after {
  content: " ";
}

// Chinese versions have proper nouns underlined
.iso6393zho .pn {
  text-decoration: underline;
}

// BOOKS version should not display verse numbers
.vid31 .verse span.label {
  display: none;
}

// For Psalms headings in NIV
.vid111 .bkPSA .it {
  display: block;
  margin-bottom: 1em;
}

// For Psalms headings in NIV
// don't display block for notes italics
.vid111 .bkPSA .note .it {
  display: inline;
  margin-bottom: 0;
}

// Temp fix to Portugese NVI version to give spacing around "SENHOR" (or "LORD" in English)
// .nd refers to "name of deity"
.vid129 .nd {
  padding: 0 5px;
}


//Certain headlines should be centered in NABRE
.vid463 div.s2 {
  text-align:center;
}

.vid483 {
	word-spacing: .4em;
}

